@@ -4,6 +4,8 @@ v1.4.0
 - Allow downloaded videos to be disabled from the screensaver selection
 TODO: Disable collections videos in one go
 TODO: Add custom collections (Context menu to remove)
+	If deleted - prompt if videos should be removed
+TODO: Support cancel of downloads
 
 v1.3.0 (2016-01-28)
 - Add support for scheduling by day
